--- a/src/global/global.css
+++ b/src/global/global.css
@@ -26,7 +26,7 @@
   
   /* Border variables */
   --theme-border-radius: 8px;
-  --theme-border-width: 1px;
+  --theme-border-width: 2px;
 
   /* Scrollbar variables */
   --theme-scrollbar-width: 4px;
